--- a/src/app/league-zone/league-teams/league-team-card/league-team-card.component.html
+++ b/src/app/league-zone/league-teams/league-team-card/league-team-card.component.html
@@ -1,7 +1,7 @@
 <div class="team-container">
   <div class="team-header">
     <div class="logo">
-      <img [src]="getLogoUrl()" />
+      <img [src]="getLogoUrl(teamDetails.logo)" />
     </div>
     <div class="team-info">
       <h2 class="team-name">
